почти все разделы

--- a/src/style/bootstrap/_bootstrap.scss
+++ b/src/style/bootstrap/_bootstrap.scss
@@ -4,12 +4,15 @@
 @import "grid";
 
 @import "color";
-@import "font";
+@import "typography";
 @import "main";
 @import "link";
-@import "align";
+@import "utilities";
+@import "padding";
+@import "tabs";
 @import "table";
 @import "button";
-@import "input";
+@import "form";
 @import "checkbox";
 @import "bg";
+@import "popover";
