--- a/src/style/bootstrap/form.scss
+++ b/src/style/bootstrap/form.scss
@@ -3,20 +3,20 @@ $base-input-padding: 10px;
 $input-padding-miltiplier: 0.35;
 $textarea-multiplier: 1.5;
 
-.base-input {
-//    box-shadow: inset 0 0 0 1px $color-smoke;
-    color: $color-slate;
-    border: 0;
+.input {
+    //    box-shadow: inset 0 0 0 1px $color-smoke;
+    color: $color-text;
+
     @include border-radius($base-border-radius);
-    background-color: #fff;
-    display: block;
+    background-color: #FFF;
+    display: inline-block;
     outline: none;
     transition: all 80ms linear;
     vertical-align: middle;
     -webkit-font-smoothing: antialiased;
     line-height: 1;
-    border: 1px solid $color-smoke;
-    width: 100%;
+    border: 1px solid $color-gray;
+    width: 200px;
     font-family: $base-font-family;
 
     &:hover {
@@ -24,7 +24,7 @@ $textarea-multiplier: 1.5;
     }
 
     &:focus {
-        border: 1px solid $color-default;
+        border: 1px solid $color-primary;
     }
 }
 
@@ -32,14 +32,14 @@ $textarea-multiplier: 1.5;
 
 $input-m-padding: round($base-input-height * $input-padding-miltiplier);
 .input-m {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-m;
     height: $base-input-height;
     padding: 0 $input-m-padding;
 }
 
 .textarea-m {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-m;
     padding: ($input-m-padding/$textarea-multiplier) $input-m-padding;
     line-height: $textarea-multiplier;
@@ -50,14 +50,14 @@ $input-m-padding: round($base-input-height * $input-padding-miltiplier);
 $input-s-height: round(($base-input-height / $btn-multiplier)/2)*2;
 $input-s-padding: round($input-s-height * $input-padding-miltiplier);
 .input-s {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-s;
     height: $input-s-height;
     padding: 0 $input-s-padding;
 }
 
 .textarea-s {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-s;
     padding: ($input-s-padding/$textarea-multiplier) $input-s-padding;
     line-height: $textarea-multiplier;
@@ -68,14 +68,14 @@ $input-s-padding: round($input-s-height * $input-padding-miltiplier);
 $input-l-height: round(($base-input-height * $btn-multiplier)/2)*2;
 $input-l-padding: round($input-l-height * $input-padding-miltiplier);
 .input-l {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-l;
     height: $input-l-height;
     padding: 0 $input-l-padding;
 }
 
 .textarea-l {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-l;
     padding: ($input-l-padding/$textarea-multiplier) $input-l-padding;
     line-height: $textarea-multiplier;
@@ -86,14 +86,14 @@ $input-l-padding: round($input-l-height * $input-padding-miltiplier);
 $input-xl-height: round(($base-input-height * $btn-multiplier * $btn-multiplier)/2)*2;
 $input-xl-padding: round($input-xl-height * $input-padding-miltiplier);
 .input-xl {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-xl;
     height: $input-xl-height;
     padding: 0 $input-xl-padding;
 }
 
 .textarea-xl {
-    @extend .base-input;
+    @extend .input;
     font-size: $font-xl;
     padding: ($input-xl-padding/$textarea-multiplier) $input-xl-padding;
     line-height: $textarea-multiplier;
@@ -102,8 +102,8 @@ $input-xl-padding: round($input-xl-height * $input-padding-miltiplier);
 //-------------
 
 .input-disabled {
-    color: $color-silver;
-    border: 1px solid $color-dark-smoke;
+    color: $color-hint;
+    border: 1px solid $color-gray;
     background-color: $color-snow;
     pointer-events: none;
     cursor: default;
@@ -114,3 +114,41 @@ $input-xl-padding: round($input-xl-height * $input-padding-miltiplier);
     @extend .input-disabled;
     resize: none;
 }
+
+.input-round {
+    @include border-radius(1000px);
+}
+
+.form-group-round {
+    .input {
+        @include border-left-radius(1000px);
+    }
+    .btn {
+        @include border-left-radius(0);
+        @include border-right-radius(1000px);
+    }
+}
+select{
+    @extend .input;
+    &.select-s{
+        font-size: $font-s;
+        height: $input-s-height;
+        padding: 0 $input-s-padding;
+    }
+    &.select-m{
+        font-size: $font-m;
+        height: $base-input-height;
+        padding: 0 $input-m-padding;
+    }
+    &.select-l{
+        font-size: $font-l;
+        height: $input-l-height;
+        padding: 0 $input-l-padding;
+    }
+    &.select-xl{
+        font-size: $font-xl;
+        height: $input-xl-height;
+        padding: 0 $input-xl-padding;
+    }
+}
+
