--- a/src/style/bootstrap/grid.scss
+++ b/src/style/bootstrap/grid.scss
@@ -1,36 +1,175 @@
-.mha {
-    margin-left: auto;
-    margin-right: auto;
+.row {
+    @include clearfix();
+    margin-right: -15px;
+    margin-left: -15px;
+    &.no-space {
+        & > [class*=col-] {
+            padding-right: 0;
+            padding-left: 0;
+        }
+    }
 }
 
-.mt1 {
-    margin-top: $step;
+[class^=col-] {
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px
 }
 
-.pt1 {
-    padding-top: $step;
+@media (max-width: 768px) {
+    .col-s-1 {
+        width: 8.33333333%;
+    }
+    .col-s-2 {
+        width: 16.66666667%;
+    }
+    .col-s-3 {
+        width: 25%;
+    }
+    .col-s-4 {
+        width: 33.33333333%;
+    }
+    .col-s-5 {
+        width: 41.66666667%;
+    }
+    .col-s-6 {
+        width: 50%;
+    }
+    .col-s-7 {
+        width: 58.33333333%;
+    }
+    .col-s-8 {
+        width: 66.66666667%;
+    }
+    .col-s-9 {
+        width: 75%;
+    }
+    .col-s-10 {
+        width: 83.33333333%;
+    }
+    .col-s-11 {
+        width: 91.66666667%;
+    }
+    .col-s-12 {
+        width: 100%;
+    }
 }
 
-.mt2 {
-    margin-top: 2*$step;
+@media (min-width: 768px) {
+    .col-m-1 {
+        width: 8.33333333%;
+    }
+    .col-m-2 {
+        width: 16.66666667%;
+    }
+    .col-m-3 {
+        width: 25%;
+    }
+    .col-m-4 {
+        width: 33.33333333%;
+    }
+    .col-m-5 {
+        width: 41.66666667%;
+    }
+    .col-m-6 {
+        width: 50%;
+    }
+    .col-m-7 {
+        width: 58.33333333%;
+    }
+    .col-m-8 {
+        width: 66.66666667%;
+    }
+    .col-m-9 {
+        width: 75%;
+    }
+    .col-m-10 {
+        width: 83.33333333%;
+    }
+    .col-m-11 {
+        width: 91.66666667%;
+    }
+    .col-m-12 {
+        width: 100%;
+    }
 }
 
-.mt3 {
-    margin-top: 3*$step;
+@media (min-width: 992px) {
+    .col-l-1 {
+        width: 8.33333333%;
+    }
+    .col-l-2 {
+        width: 16.66666667%;
+    }
+    .col-l-3 {
+        width: 25%;
+    }
+    .col-l-4 {
+        width: 33.33333333%;
+    }
+    .col-l-5 {
+        width: 41.66666667%;
+    }
+    .col-l-6 {
+        width: 50%;
+    }
+    .col-l-7 {
+        width: 58.33333333%;
+    }
+    .col-l-8 {
+        width: 66.66666667%;
+    }
+    .col-l-9 {
+        width: 75%;
+    }
+    .col-l-10 {
+        width: 83.33333333%;
+    }
+    .col-l-11 {
+        width: 91.66666667%;
+    }
+    .col-l-12 {
+        width: 100%;
+    }
 }
 
-.ml1 {
-    margin-left: $step;
-}
-
-.pl1 {
-    padding-left: $step;
-}
-
-.ml2 {
-    margin-left: (2 * $step);
-}
-
-.pl2 {
-    padding-left: (2 * $step);
+@media (min-width: 1200px) {
+    .col-xl-1 {
+        width: 8.33333333%;
+    }
+    .col-xl-2 {
+        width: 16.66666667%;
+    }
+    .col-xl-3 {
+        width: 25%;
+    }
+    .col-xl-4 {
+        width: 33.33333333%;
+    }
+    .col-xl-5 {
+        width: 41.66666667%;
+    }
+    .col-xl-6 {
+        width: 50%;
+    }
+    .col-xl-7 {
+        width: 58.33333333%;
+    }
+    .col-xl-8 {
+        width: 66.66666667%;
+    }
+    .col-xl-9 {
+        width: 75%;
+    }
+    .col-xl-10 {
+        width: 83.33333333%;
+    }
+    .col-xl-11 {
+        width: 91.66666667%;
+    }
+    .col-xl-12 {
+        width: 100%;
+    }
 }
