--- a/src/style/bootstrap/mixins.scss
+++ b/src/style/bootstrap/mixins.scss
@@ -33,6 +33,14 @@
     border-top-left-radius: $radius;
     border-bottom-left-radius: $radius;
 }
+@mixin border-right-radius($radius) {
+    -webkit-border-top-right-radius: $radius;
+    -webkit-border-bottom-right-radius: $radius;
+    -moz-border-radius-topright: $radius;
+    -moz-border-radius-bottomright: $radius;
+    border-top-right-radius: $radius;
+    border-bottom-right-radius: $radius;
+}
 
 @mixin border-top-radius($radius) {
     -webkit-border-top-left-radius: $radius;
@@ -132,5 +140,5 @@
     border-left: $sides solid transparent;
     border-right: $sides solid transparent;
     border-top: $main solid $color;
-    border-botton: 0;
+    border-bottom: 0;
 }
