--- a/src/style/bootstrap/_bootstrap.scss
+++ b/src/style/bootstrap/_bootstrap.scss
@@ -11,8 +11,10 @@
 @import "padding";
 @import "tabs";
 @import "table";
-@import "button";
+@import "modal";
 @import "form";
 @import "checkbox";
 @import "bg";
 @import "popover";
+@import "dropdown";
+@import "button";
