--- a/src/style/bootstrap/vars.scss
+++ b/src/style/bootstrap/vars.scss
@@ -4,5 +4,5 @@ $btn-multiplier: 1.25;
 
 $base-font-size: 14px;
 $base-font-family: "Open Sans", Helvetica Neue, Arial, Helvetica, sans-serif;
-$base-line-height: 1.48;
+$base-line-height: 1.428571429;
 $base-border-radius: 4px;
