--- a/src/style/bootstrap/popover.scss
+++ b/src/style/bootstrap/popover.scss
@@ -1,3 +1,4 @@
+$tooltip-bg: rgba(0, 0, 0, 0.8);
 .popover {
     position: absolute;
     top: 0;
@@ -126,7 +127,7 @@
             bottom: 0;
             left: 50%;
             margin-left: -5px;
-            border-top-color: #000;
+            border-top-color: $tooltip-bg;
             border-width: 5px 5px 0;
         }
     }
@@ -137,7 +138,7 @@
             top: 50%;
             left: 0;
             margin-top: -5px;
-            border-right-color: #000;
+            border-right-color: $tooltip-bg;
             border-width: 5px 5px 5px 0;
         }
     }
@@ -148,7 +149,7 @@
             top: 0;
             left: 50%;
             margin-left: -5px;
-            border-bottom-color: #000;
+            border-bottom-color: $tooltip-bg;
             border-width: 0 5px 5px;
         }
     }
@@ -159,7 +160,7 @@
             top: 50%;
             right: 0;
             margin-top: -5px;
-            border-left-color: #000;
+            border-left-color: $tooltip-bg;
             border-width: 5px 0 5px 5px;
         }
     }
@@ -174,7 +175,7 @@
         .tooltip-arrow {
             bottom: 0;
             left: 5px;
-            border-top-color: #000;
+            border-top-color: $tooltip-bg;
             border-width: 5px 5px 0;
         }
     }
@@ -182,7 +183,7 @@
         .tooltip-arrow {
             right: 5px;
             bottom: 0;
-            border-top-color: #000;
+            border-top-color: $tooltip-bg;
             border-width: 5px 5px 0;
         }
     }
@@ -191,7 +192,7 @@
         .tooltip-arrow {
             top: 0;
             left: 5px;
-            border-bottom-color: #000;
+            border-bottom-color: $tooltip-bg;
             border-width: 0 5px 5px;
         }
     }
@@ -200,7 +201,7 @@
         .tooltip-arrow {
             top: 0;
             right: 5px;
-            border-bottom-color: #000;
+            border-bottom-color: $tooltip-bg;
             border-width: 0 5px 5px;
         }
     }
@@ -208,11 +209,11 @@
 
 .tooltip-inner {
     max-width: 200px;
-    padding: 3px 8px;
+    padding: 5px 8px;
     color: #FFF;
     text-align: center;
     text-decoration: none;
-    background-color: #000;
+    background-color: $tooltip-bg;
     border-radius: 4px;
 }
 
